@@ -1,3 +1,9 @@
+2011-03-22 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* support/regression/ports/ds390/spec.mk,
+	* support/regression/ports/hc08/spec.mk,
+	* support/regression/ports/ucz80/spec.mk: fixed output
+
 2011-03-21 Borut Razem <borut.razem AT gmail.com>
 
 	* src/SDCCmacro.c: fixed bug, introduced 2011-03-20:
